Add updated work.html file to repo

--- a/work/work.html
+++ b/work/work.html
@@ -19,30 +19,28 @@
                 <h1>My Portfolio</h1>
             </div>
             
-        <div class="projects">
-            <div class="project-one">
-                <img src="../img/rogue.PNG" alt="foodtruck"/>
-            <div id="description-one">
-                    <p>This was my first project.</p>
-            </div>
-            </div>
+        <div class="box">
+            <h2>Rogue Pickings</h2>
+            <img src="../img/rogue.PNG">
+                <p>In this description I will explain how I created the html and css from scratch based on my client's expectations.</p>
+         
+        </div> <!---box-one closing div-->
 
-            <div class="project-two">
-                <img src="../img/water (1).jpg" alt="lightbulbs"/>
-            <div id="description-two">
-                <p>This was my second project</p>
-            </div>    
-            </div>
+        <div class="box">
+            <h2>Designer Water</h2>
+            <img src="../img/water (1).jpg"
+                <p>This project focused on designing a mock-up using Figma, and then creating a site for am innovative water company.</p>
+        </div> <!---box-two closing div-->
 
-            <div class="project-three">
-                <img src="../img/change.jpg" alt="design book"/>
-            <div id="description-three">
-                <p>This was my third project.</p>
-            </div>
-            </div>       
-        </div>
+        <div class= box>
+            <h2>Noble BBQ</h2>
+            <img src="../img/noble.PNG">
+                <p>For this project, I used WordPress to create a user-friendly e-commerce site.</p>
+        </div> <!--box-three closing div-->
+
     <footer class="work-footer">
-        <a href="index.html">Back to Home</a></h2>
+        <h3>Contact me today to get started!</h3>
+        <p>katekeefer@gmail.com</p>
     </footer>
     </div>
     </body>
